--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,283 +1,88 @@
 * {
-    font-family: JetBrainsMono Nerd Font Mono;
-    font-size: 13px;
+    /* `otf-font-awesome` is required to be installed for icons */
+    font-family: JetBrainsMonoNL Nerd Font Mono;
+    font-size: 12px;
 }
 
+/*---БАР----------------------------------------------------------------*/
 window#waybar {
-    background-color: transparent;
+    background-color: rgba(43, 48, 59, 0.0);
+    color: #ffffff;
+    transition-property: background-color;
+    transition-duration: .5s;
+    padding: 0;
+    margin: 0;
 }
 
-#workspaces{
-    background-color: transparent;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    margin-left: 25px;
-}
-#workspaces button{
-    box-shadow: rgba(0, 0, 0, 0.116) 2 2 5 2px;
-    background-color: #fff ;
-    border-radius: 15px;
-    margin-right: 10px;
-    padding-top: 4px;
-    padding-bottom: 2px;
-    padding-right: 10px;
-    font-weight: bolder;
-    color: 	#cba6f7 ;
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
 }
 
-#workspaces button.active{
-    padding-right: 20px;
-    box-shadow: rgba(0, 0, 0, 0.288) 2 2 5 2px;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    padding-left: 20px;
-    padding-bottom: 3px;
-    background: rgb(202,158,230);
-    background: linear-gradient(45deg, rgba(202,158,230,1) 0%, rgba(245,194,231,1) 43%, rgba(180,190,254,1) 80%, rgba(137,180,250,1) 100%); 
-    background-size: 300% 300%;
-    animation: gradient 10s ease infinite;
-    color: #fff;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
 }
 
 
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#custom-expand,
-#custom-cycle_wall,
-#custom-ss,
-#custom-dynamic_pill,
-#mpd {
-    padding: 0 10px;
-    border-radius: 15px;
-    background-color: #cdd6f4;
-    color: #516079;
-    box-shadow: rgba(0, 0, 0, 0.116) 2 2 5 2px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 10px;
+/*---КНОПКИ-------------------------------------------------------------*/
+button {
+    margin: 0;
+    padding: 10;
+    background-color: #262a32;
+    color: #d8dee8;
+    border-radius: 15;
 }
 
-#custom-dynamic_pill.low{
-    background: rgb(148,226,213);
-    background: linear-gradient(52deg, rgba(148,226,213,1) 0%, rgba(137,220,235,1) 19%, rgba(116,199,236,1) 43%, rgba(137,180,250,1) 56%, rgba(180,190,254,1) 80%, rgba(186,187,241,1) 100%); 
-    background-size: 300% 300%;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    animation: gradient 15s ease infinite;
-    font-weight: bolder;
-    color: #fff;
+button:hover {
+    margin: 0;
+    padding: 10;
+    background-color: #262a32;
+    color: #d8dee8;
+    border-radius: 15;
 }
-#custom-dynamic_pill.normal{
-    background: rgb(166,209,137);
-    background: linear-gradient(52deg, rgba(166,209,137,1) 0%, rgba(166,227,161,1) 26%, rgba(148,226,213,1) 65%, rgba(129,200,190,1) 100%); 
-    background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    font-weight: bolder;
-    color: #fff;
-}
-#custom-dynamic_pill.critical{
-    background: rgb(235,160,172);
-    background: linear-gradient(52deg, rgba(235,160,172,1) 0%, rgba(243,139,168,1) 30%, rgba(231,130,132,1) 48%, rgba(250,179,135,1) 77%, rgba(249,226,175,1) 100%); 
-    background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    font-weight: bolder;
-    color: #fff;
+
+button:focus {
+    margin: 0;
+    padding: 10;
+    background-color: #262a32;
+    color: #d8dee8;
+    border-radius: 15;
 }
 
 
-#custom-dynamic_pill.playing{
-    background: rgb(249,226,175);
-    background: linear-gradient(45deg, rgba(249,226,175,1) 0%, rgba(245,194,231,1) 20%, rgba(180,190,254,1) 100%); 
-    background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    font-weight: 900;
-    color: #fff ;
-}
-#custom-dynamic_pill.paused{
-    background: #fff ;
-    font-weight: bolder;
-    color: #b4befe;
+/*---КНОПКИ ОКОН--------------------------------------------------------*/
+#workspaces {
+    margin: 0;
 }
 
-#custom-ss{
-    background: #fff;
-    color: rgba(203,166,247,1);
-    font-weight:  bolder;
-    padding: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 15px;
+#workspaces button {
+    padding: 0 5;
+    margin: 5;
+    background-color: #262a32;
+    color: #444b6a;
+    border-radius: 16;
 }
 
-#custom-cycle_wall{
-    background: rgb(245,194,231);
-    background: linear-gradient(45deg, rgba(245,194,231,1) 0%, rgba(203,166,247,1) 0%, rgba(243,139,168,1) 13%, rgba(235,160,172,1) 26%, rgba(250,179,135,1) 34%, rgba(249,226,175,1) 49%, rgba(166,227,161,1) 65%, rgba(148,226,213,1) 77%, rgba(137,220,235,1) 82%, rgba(116,199,236,1) 88%, rgba(137,180,250,1) 95%); 
-    color: #fff;
-    background-size: 500% 500%;
-    animation: gradient 7s linear infinite;
-    font-weight:  bolder;
-    padding: 5px;
-    border-radius: 15px;
+#workspaces button:hover {
+    color: #444b6a;
+}
+
+#workspaces button.active {
+    background-color: #262a32;
+    color: #0db9d7;
+}
+
+#workspaces button.urgent {
+    background-color: #eb4d4b;
 }
 
 
-#clock {
-    background: rgb(245,194,231);
-    background: linear-gradient(45deg, rgba(245,194,231,1) 0%, rgba(203,166,247,1) 64%, rgba(202,158,230,1) 100%); 
-    margin-right: 25px;
-    color: #fff ;
-    background-size: 300% 300%;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    animation: gradient 20s ease infinite;
-    font-size: 15px;
-    padding-top: 5px;
-    padding-right: 21px;
-    font-weight: bolder;
-    padding-left: 20px
-}
-
-#battery.charging, #battery.plugged {
-    background-color: #94e2d5 ;
-}
-
-#battery {
-    background-color: #fff;
-    color:#a6e3a1;
-    font-weight: bolder;
-    font-size: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-@keyframes blink {
-    to {
-        background-color: #f9e2af;
-        color:#96804e;
-    }
-}
-
-#battery.critical:not(.charging) {
-    background-color:  #f38ba8;
-    color:#bf5673;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-label:focus {
-   
-}
-
-#cpu {
-    background: rgb(180,190,254);
-    background: linear-gradient(52deg, rgba(180,190,254,1) 0%, rgba(137,220,235,1) 32%, rgba(137,180,250,1) 72%, rgba(166,227,161,1) 100%); 
-    background-size: 300% 300%;
-    animation: gradient 20s ease infinite;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
-    /* background-color: #b4befe; */
-    color: 	#fff;
-}
-
-#memory {
-    background-color: #cba6f7;
-    color: 	#9a75c7;
-    font-weight: bolder;
-}
-
-#disk {
-    color: #964B00;
-}
-
-#backlight {
-    color: #90b1b1;
-}
-
-#network{
-    color:#000;
-}
-
-#network.disabled{
-    background-color: #45475a;
-}
-
-#network.disconnected{
-    background: rgb(243,139,168);
-    background: linear-gradient(45deg, rgba(243,139,168,1) 0%, rgba(250,179,135,1) 100%); 
-    color: #fff;
-    font-weight: bolder;
-    padding-top: 3px;
-    padding-right: 11px;
-}
-
-#network.linked, #network.wifi{
-    background-color: #a6e3a1 ;
-}
-
-#network.ethernet{
-    background-color:#f9e2af ;
-}
-
-#pulseaudio {
-    background-color:  	#fab387;
-    color: #bf7d54;
-    font-weight: bolder;
-}
-
-#pulseaudio.muted {
-    background-color: #90b1b1;
-}
-
-#custom-media {
-    color: #66cc99;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f9e2af;
-    color:#96804e;
-}
-
-#temperature.critical {
-    background-color: #f38ba8 ;
-    color:#bf5673;
-}
-
+/*---ТРЕЙ---------------------------------------------------------------*/
 #tray {
-    background-color: #2980b9;
+    padding: 7;
+    margin: 5 0 5 0;
+    background-color: #262a32;
+    color: #d8dee8;
+    border-radius: 15;
 }
 
 #tray > .passive {
@@ -286,41 +91,69 @@ label:focus {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
 }
 
-#idle_inhibitor {
-    background-color: #2d3436;
+
+/*---CMUS---------------------------------------------------------------*/
+#custom-cmus {
+    padding: 0 15 0 15;
+    margin: 5px 0 5px 0;
+    background-color: #262a32;
+    color: #b9f27c;
+    border-radius: 15;
 }
 
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
+
+/*---ALSA---------------------------------------------------------------*/
+#custom-alsa {
+    padding: 0 15 0 15;
+    margin: 5px 0 5px 0;
+    background-color: #262a32;
+    color: #ff9e64;
+    border-radius: 15;
 }
 
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
+
+/*---WINDOW-------------------------------------------------------------*/
+#window {
+    padding: 0 15 0 15;
+    margin: 5px 0 5px 0;
+    background-color: #262a32;
+    color: #0db9d7;
+    border-radius: 15;
 }
 
-#mpd.disconnected {
-    background-color: #f53c3c;
+
+/*---WINDOW-------------------------------------------------------------*/
+#clock {
+    padding: 0 15 0 15;
+    margin: 5px 0 5px 0;
+    background-color: #262a32;
+    color: #ff7a93;
+    border-radius: 15;
 }
 
-#mpd.stopped {
-    background-color: #90b1b1;
+
+#mode,
+#language,
+#custom-weather {
+    padding: 0 15 0 15;
+    margin: 5px 0 5px 0;
+    background-color: #262a32;
+    color: #d8dee8;
+    border-radius: 15;
 }
 
-#mpd.paused {
-    background-color: #51a37a;
+
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: #000000;
+    }
 }
 
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+label:focus {
+    background-color: #ffffff;
 }
 
 #keyboard-state {
@@ -332,7 +165,7 @@ label:focus {
 }
 
 #keyboard-state > label {
-    padding: 0 5px;
+    padding: 0 0px;
 }
 
 #keyboard-state > label.locked {
