--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -62,6 +62,20 @@ button:focus {
     border-radius: 16;
 }
 
+/*#workspaces button.active{
+    padding-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.288) 2 2 5 2px;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.377);
+    padding-left: 20px;
+    padding-bottom: 0px;
+    background: rgb(202,158,230);
+    background: linear-gradient(45deg, rgba(202,158,230,1) 0%, rgba(245,194,231,1) 43%, rgba(180,190,254,1) 80%, rgba(137,180,250,1) 100%); 
+    background-size: 300% 300%;
+    animation: gradient 10s ease infinite;
+    color: #fff;
+}
+*/
+
 #workspaces button:hover {
     color: #444b6a;
 }
